--- a/Gemma/.settings/org.eclipse.wst.common.component
+++ b/Gemma/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="spring-tutorial-50">
+    <wb-module deploy-name="donzalmart">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="spring"/>
-        <property name="java-output-path" value="/spring-tutorial-50/build/classes"/>
+        <property name="java-output-path" value="/donzalmart/build/classes"/>
     </wb-module>
 </project-modules>
