--- a/Gemma/WebContent/WEB-INF/layouts/default.xml
+++ b/Gemma/WebContent/WEB-INF/layouts/default.xml
@@ -76,6 +76,13 @@
 		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
 		<put-attribute name="content" value="/WEB-INF/tiles/productdetails.jsp"></put-attribute>
 	</definition>
+	<definition name="cart" extends="gemma.base">
+		<put-attribute name="heading_title" value="Invoice"></put-attribute>
+		<put-attribute name="title" value="Invoice"></put-attribute>
+		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/cart.jsp"></put-attribute>
+		<put-attribute name="footer" value="/WEB-INF/tiles/blank.jsp"></put-attribute>
+	</definition>
 	<definition name="addinventory" extends="gemma.base">
 		<put-attribute name="heading_title" value="Add New Products"></put-attribute>
 		<put-attribute name="title" value="Add New Products"></put-attribute>
