Added a simple cart. We need to add payment card processing next.

--- a/Gemma/WebContent/resources/css/style.css
+++ b/Gemma/WebContent/resources/css/style.css
@@ -340,3 +340,11 @@ table.dailyspecials td {
 	padding: 1em;	
 	vertical-align: bottom;
 }
+.invoicetable td
+{
+	text-align: center;	
+}
+.invoicedetail td
+{
+	padding: 2em;
+}
