--- a/Gemma/WebContent/resources/css/style.css
+++ b/Gemma/WebContent/resources/css/style.css
@@ -51,7 +51,14 @@ hr {
 	border: 0;
 	border-top: 1px solid #000000;
 }
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
 
+    text-decoration: none;
+    color: initial;
+}
 a:link {
 	color: royalblue;
 }
@@ -348,3 +355,4 @@ table.dailyspecials td {
 {
 	padding: 2em;
 }
+
