--- a/Gemma/WebContent/WEB-INF/layouts/default.xml
+++ b/Gemma/WebContent/WEB-INF/layouts/default.xml
@@ -182,6 +182,12 @@
 		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
 		<put-attribute name="content" value="/WEB-INF/tiles/userdetails.jsp"></put-attribute>
 	</definition>
+	<definition name="thankyou" extends="gemma.base">
+		<put-attribute name="heading_title" value="Salamat"></put-attribute>
+		<put-attribute name="title" value="Thank You"></put-attribute>
+		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/thankyou.jsp"></put-attribute>
+	</definition>
 
 </tiles-definitions>
 
