--- a/Gemma/WebContent/WEB-INF/layouts/default.xml
+++ b/Gemma/WebContent/WEB-INF/layouts/default.xml
@@ -206,6 +206,18 @@
 		<put-attribute name="toolbar" value="/WEB-INF/tiles/admintoolbar.jsp"></put-attribute>
 		<put-attribute name="content" value="/WEB-INF/tiles/filepicker.jsp"></put-attribute>
 	</definition>
+	<definition name="pickcategory" extends="gemma.base">
+		<put-attribute name="heading_title" value="Pick a Category"></put-attribute>
+		<put-attribute name="title" value="Category"></put-attribute>
+		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/pickcategory.jsp"></put-attribute>
+	</definition>
+	<definition name="picksubcategory" extends="gemma.base">
+		<put-attribute name="heading_title" value="Pick a Subcategory"></put-attribute>
+		<put-attribute name="title" value="Subcategory"></put-attribute>
+		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/picksubcategory.jsp"></put-attribute>
+	</definition>
 </tiles-definitions>
 
 
