Moved the admin pages under the admin main page and put their links in a panel, in the admin page.
Truncated the date (set the hours, minutes and seconds to 0) for listing
general ledger. Now the date selector works the way it should.

--- a/Gemma/WebContent/WEB-INF/layouts/default.xml
+++ b/Gemma/WebContent/WEB-INF/layouts/default.xml
@@ -115,6 +115,18 @@
 		<put-attribute name="content"
 			value="/WEB-INF/tiles/inventorydetails.jsp"></put-attribute>
 	</definition>
+	<definition name="admininventory" extends="gemma.base">
+		<put-attribute name="heading_title" value="Inventory Tasks"></put-attribute>
+		<put-attribute name="title" value="Inventory Tasks"></put-attribute>
+		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/admininventory.jsp"></put-attribute>
+	</definition>
+	<definition name="singleitem" extends="gemma.base">
+		<put-attribute name="heading_title" value="Restock Single Item"></put-attribute>
+		<put-attribute name="title" value="Restock Single Item"></put-attribute>
+		<put-attribute name="toolbar" value="/WEB-INF/tiles/toolbar.jsp"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/singleitem.jsp"></put-attribute>
+	</definition>
 	<definition name="uploadfile" extends="gemma.base">
 		<put-attribute name="heading_title" value="Upload Product Image"></put-attribute>
 		<put-attribute name="title" value="Upload Image"></put-attribute>
