--- a/Gemma/WebContent/resources/css/style.css
+++ b/Gemma/WebContent/resources/css/style.css
@@ -320,13 +320,13 @@ td:nth-child(1) {
 
 .content {
 	height: 550px;
-	background: -webkit-linear-gradient(lightblue, white);
+	background: -webkit-linear-gradient(#d5e6ee, white);
 	/* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(lightblue, white);
+	background: -o-linear-gradient(#d5e6ee, white);
 	/* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(lightblue, white);
+	background: -moz-linear-gradient(#d5e6ee, white);
 	/* For Firefox 3.6 to 15 */
-	background: linear-gradient(lightblue, white);
+	background: linear-gradient(#d5e6ee, white);
 	/* Standard syntax (must be last) */
 }
 
@@ -381,7 +381,7 @@ table.dailyspecials td {
 }
 tfoot.tablefooter td 
 {
-	background: #bfd8e6;
+	background: #d5e6ee;
 	color: #000000;
 	font-size: 12px;
 	font-weight: 900;
