--- a/Gemma/WebContent/resources/css/style.css
+++ b/Gemma/WebContent/resources/css/style.css
@@ -591,14 +591,66 @@ fieldset {
 .printorders {
 	float: center;
 }
-table.returns td {
-	font-weight: bold;
-	text-align: left;
-	padding-right: 2em;
+.returns {
+border-collapse: collapse;	
+}
+.returns td {
+	text-align: right;	
+	padding: 0 2.5em;
 	
 }
 
-.returns th {
-	padding-right: 2em;
+
+.viewreturns {
+	border-collapse: collapse;
+}
+
+.viewreturns td {
+	text-align: right;	
+	padding: 0 2.5em;
+}
+table.viewreturns tr:nth-child(odd)
+{
+	background: #dedbee;
+}
+table.viewreturns tr:nth-child(even)
+{
+	background: #fbfbff;
+}
+table.viewreturns th
+{
+	background: #f5f3c2;
+}
+.rmadetails {
+	border-collapse: collapse;	
+}
+table.rmadetails th {
+	background: #f5f3c2;
+}
+table.rmadetails td, th {
 	text-align: left;
+	padding: 0 2.5em;	
+}
+table.rmadetails caption{
+	font-weight: bold;
+	background: #a6a6ff;
+}
+hr {
+	    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: double;
+    border-width: 4px;
+    border-color: #c9c4e3;
+}
+table.getRma td, th {
+	text-align: left;
+	padding: 0 2.5em;	
+}
+table.returns-status td, th {
+	text-align: left;
+	padding: 0 2.5em;	
+	
 }
