--- a/Gemma/.settings/org.eclipse.wst.common.component
+++ b/Gemma/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
-        <property name="context-root" value="spring"/>
+        <property name="context-root" value=""/>
         <property name="java-output-path" value="/donzalmart/build/classes"/>
     </wb-module>
 </project-modules>
